--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --NotebookApp.token=NovaSenha123
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.jupyterlab.rule=Host(`localhost`)"
+      - "traefik.http.routers.jupyterlab.rule=Host(`192.168.117.128`)"
       - "traefik.http.services.jupyterlab.loadbalancer.server.port=8888"
       - "traefik.http.routers.jupyterlab.entrypoints=web"
 
